# self-learning

./: .gitignore  CMakeLists.txt  README.md
include/: image.hpp  thread_safe_queue.hpp
parallel-programming/image-processing/src/: main.cpp
parallel-programming/include/: median-filter.hpp
parallel-programming/k-means/: CMakeLists.txt  README.md
parallel-programming/k-means/include/: kmeans.hpp  timer.hpp
parallel-programming/k-means/src/: kmeans.cpp  main.cpp  timer.cpp
parallel-programming/k-means/tests/: test_kmeans.cpp
parallel-programming/src/: median-filter.cpp
src/: canny-edge.cpp  main.cpp  main_tsq.cpp  thread_safe_queue.cpp
